--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         | <a href="http://tumblr.com/" title="Tumblr Hit Counter">Tumblr</a> | <a href="http://www.facebook.com/" title="Facebook Hit Counter">Facebook</a></p>
     </div>
     <div style="text-align: center; margin-top: 60px;"><small>
-            <a href="http://blog.hit-counter.org">Blog</a> | Powered By <a href="http://hit-counter.org">hit-counter.org</a>
+            <a href="http://blog.hit-counter.org">Blog</a> | Powered By <a href="http://hit-counter.org">hit-counter.org</a> GitHub
         </small></div>
 
 
