--- a/index.html
+++ b/index.html
@@ -72,17 +72,7 @@
 </div>
 <hr>
 <div style="width:798px;margin:20px auto 0 auto;">
-    <script type="text/javascript"><!--
-        google_ad_client = "ca-pub-8503698798356436";
-        /* hit728 */
-        google_ad_slot = "5875145340";
-        google_ad_width = 728;
-        google_ad_height = 90;
-        //-->
-    </script>
-    <script type="text/javascript"
-            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-    </script>
+    <!-- empty -->
 </div>
 <hr>
 <div style="width:798px;margin:20px auto 0 auto;">
@@ -92,17 +82,7 @@
     <div style="text-align: center; margin-top: 10px;">
         <hr>
         <div>
-            <script type="text/javascript"><!--
-                google_ad_client = "ca-pub-8503698798356436";
-                /* hit728 */
-                google_ad_slot = "5875145340";
-                google_ad_width = 728;
-                google_ad_height = 90;
-                //-->
-            </script>
-            <script type="text/javascript"
-                    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-            </script>
+            <!-- empty -->
         </div>
         <hr>
         <form method="post" action="signup.php" name="hitcountertype">
@@ -150,17 +130,7 @@
             <div style="margin-top:30px;">
                 <hr>
                 <div>
-                    <script type="text/javascript"><!--
-                        google_ad_client = "ca-pub-8503698798356436";
-                        /* hit728 */
-                        google_ad_slot = "5875145340";
-                        google_ad_width = 728;
-                        google_ad_height = 90;
-                        //-->
-                    </script>
-                    <script type="text/javascript"
-                            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-                    </script>
+                    <!-- empty -->
                 </div>
                 <hr>
                 <input maxlength="256" size="40" name="url" value="http://"><input name="OK" value="OK" type="submit">
